# syla-roads

./: .gitignore  CMakeLists.txt  Makefile  README.md  SMALL.map  basic.map  city.cpp  city.h  city_view.cpp  city_view.h  config.txt  control_keys.cpp  control_keys.h  controller.cpp  controller.h  crew.cpp  crew.h  def.map  enum.h  game.cpp  game.h  game_config.cpp  game_config.h  game_object.h  map.cpp  map.h  map_choice_presenter.cpp  map_choice_presenter.h  map_presenter.cpp  map_presenter.h  maps.in  node.cpp  node.h  node_view.cpp  node_view.h  object_view.cpp  object_view.h  painter.cpp  painter.h  player.cpp  (+17 more)
client/: client.cpp  client.h  main.cpp
game/: city.cpp  city.h  crew.cpp  crew.h  enum.h  game_object.h  node.h  parameters.h  road.cpp  road.h
maps/: spizdy.map
server/: main.cpp
src/client/: client.cpp  client.h
src/game/: city.cpp  city.h  city_view.cpp  city_view.h  control_keys.cpp  control_keys.h  controller.cpp  crew.cpp  crew.h  game.cpp  game_config.cpp  game_config.h  game_object.h  main.cpp  player.cpp  player.h  road.cpp  road.h  road_view.cpp
src/network/: server.cpp
src/painter/: painter.cpp  painter.h  shapes.cpp
src/utils/: utils.h
